ICP-21 : Gestion du bug du bouton de suppr et gestions des bugs d'affichage expand/collapse

--- a/src/app/components/add-event-list/add-event-item/add-event-item.component.scss
+++ b/src/app/components/add-event-list/add-event-item/add-event-item.component.scss
@@ -28,8 +28,8 @@ textarea {
 
 .btn-circle {
   transition: 0.3s;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   &:hover {
     background-color: $bootstrap-light-darker !important;
   }
